--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
-    "@aws-cdk/core": "1.51.0",
+    "@aws-cdk/aws-codebuild": "^1.64.1",
+    "@aws-cdk/aws-codepipeline": "^1.64.1",
+    "@aws-cdk/aws-codepipeline-actions": "^1.64.1",
+    "@aws-cdk/aws-ec2": "^1.64.1",
+    "@aws-cdk/aws-logs": "^1.64.1",
+    "@aws-cdk/core": "^1.64.1",
+    "@ndlib/ndlib-cdk": "^1.5.0",
     "source-map-support": "^0.5.16"
   }
 }
