--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cdk",
+  "name": "nifi-cdk",
   "version": "0.1.0",
   "bin": {
-    "cdk": "bin/cdk.js"
+    "app-infrastructure": "bin/app-infrastructure.js"
   },
   "scripts": {
     "build": "tsc",
@@ -11,22 +11,22 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.51.0",
-    "@types/jest": "^25.2.1",
-    "@types/node": "10.17.5",
-    "jest": "^25.5.0",
-    "ts-jest": "^25.3.1",
-    "aws-cdk": "1.51.0",
+    "@aws-cdk/assert": "1.70.0",
+    "@types/jest": "^26.0.10",
+    "@types/node": "10.17.27",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.2.0",
+    "aws-cdk": "1.70.0",
     "ts-node": "^8.1.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-codebuild": "^1.64.1",
-    "@aws-cdk/aws-codepipeline": "^1.64.1",
-    "@aws-cdk/aws-codepipeline-actions": "^1.64.1",
-    "@aws-cdk/aws-ec2": "^1.64.1",
-    "@aws-cdk/aws-logs": "^1.64.1",
-    "@aws-cdk/core": "^1.64.1",
+    "@aws-cdk/aws-ec2": "^1.70.0",
+    "@aws-cdk/aws-ecs": "^1.70.0",
+    "@aws-cdk/aws-logs": "^1.70.0",
+    "@aws-cdk/aws-s3": "^1.70.0",
+    "@aws-cdk/aws-servicediscovery": "^1.70.0",
+    "@aws-cdk/core": "^1.70.0",
     "@ndlib/ndlib-cdk": "^1.5.0",
     "source-map-support": "^0.5.16"
   }
