Tell package.json where to find the packages

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "bin": {
     "nifi-blueprints": "bin/nifi-blueprints.js"
   },
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
