add runners to test build and run unit tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
     "strictPropertyInitialization": false,
     "typeRoots": ["./node_modules/@types"]
   },
+  "include": ["src"],
   "exclude": ["cdk.out"]
 }
