--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "@aws-cdk/aws-servicediscovery": "^1.70.0",
     "@aws-cdk/core": "^1.70.0",
     "@ndlib/ndlib-cdk": "^1.5.0",
-    "source-map-support": "^0.5.16"
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "source-map-support": "^0.5.16",
+    "standardx": "^7.0.0"
   }
 }
